<?xml version="1.0"?>
<package>
  <name>ros_numpy</name>
  <version>0.0.3</version>
  <description>A collection of conversion function for extracting numpy arrays from messages</description>

  <maintainer email="wieser@mit.edu">Eric Wieser</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ros_numpy</url>
  <url type="repository">https://github.com/eric-wieser/ros_numpy</url>
  <url type="bugtracker">https://github.com/eric-wieser/ros_numpy/issues</url>

  <author email="wieser@mit.edu">Eric Wieser</author>

  <run_depend>python-numpy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>