<?xml version="1.0"?>
<package format="3">
  <name>ros_numpy</name>
  <version>0.0.3</version>
  <description>A collection of conversion function for extracting numpy arrays from messages</description>

  <maintainer email="wieser@mit.edu">Eric Wieser</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ros_numpy</url>
  <url type="repository">https://github.com/eric-wieser/ros_numpy</url>
  <url type="bugtracker">https://github.com/eric-wieser/ros_numpy/issues</url>

  <author email="wieser@mit.edu">Eric Wieser</author>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
